--- a/app/src/main/res/layout/activity_cadastro_tarefa.xml
+++ b/app/src/main/res/layout/activity_cadastro_tarefa.xml
@@ -12,7 +12,7 @@
         android:id="@+id/text_TituloCadastro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/oque_voc_pretende_fazer"
@@ -24,6 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:hint="@string/informe_o_nome_de_sua_tarefa"
         android:layout_below="@+id/text_TituloCadastro"/>
 
@@ -33,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="18dp"
         android:text="@string/data_da_atividade"
         android:layout_below="@+id/edit_TituloCadastro"/>
 
@@ -49,13 +51,34 @@
         android:inputType="none" />
 
     <TextView
+        android:id="@+id/text_HoraCadastro"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="18dp"
+        android:text="@string/hora_da_atividade"
+        android:layout_below="@+id/edit_DataCadastro"/>
+
+    <EditText
+        android:id="@+id/edit_HoraCadastro"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text_HoraCadastro"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:inputType="none" />
+
+    <TextView
         android:id="@+id/text_Periodicidade"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/edit_DataCadastro"
+        android:layout_marginTop="18dp"
+        android:layout_below="@+id/edit_HoraCadastro"
         android:text="@string/qual_a_periodicidade_de_sua_tarefa" />
 
     <Spinner
@@ -72,7 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="18dp"
         android:layout_below="@+id/spinner_Periodicidade"
         android:text="@string/qual_a_criticidade_da_atividade"/>
 
@@ -86,25 +109,14 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_AdicionarTarefa"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_input_add"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_alignEnd="@+id/spinner_Criticidade"
         android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/spinner_Criticidade" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_CancelarInclusao"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/colorPrimary"
         android:clickable="true"
-        app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
-        android:layout_alignTop="@+id/fab_AdicionarTarefa"
-        android:layout_alignStart="@+id/spinner_Criticidade"
-        android:layout_marginStart="16dp" />
+        android:src="@drawable/ic_send_white_24dp" />
 
 </RelativeLayout>
