--- a/app/src/main/res/layout/activity_linha_tarefa.xml
+++ b/app/src/main/res/layout/activity_linha_tarefa.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:text="Data"
         android:layout_marginLeft="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_below="@+id/text_Titulo"/>
 
     <ImageButton
