--- a/app/src/main/res/layout/activity_cadastro_tarefa.xml
+++ b/app/src/main/res/layout/activity_cadastro_tarefa.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,115 +7,26 @@
     android:orientation="vertical"
     tools:context="com.example.maykon.exemplos.Activitys.CadastroTarefa">
 
-
-    <TextView
-        android:id="@+id/text_TituloCadastro"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:text="@string/oque_voc_pretende_fazer"
-        android:layout_alignParentTop="true"/>
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <EditText
-        android:id="@+id/edit_TituloCadastro"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:hint="@string/informe_o_nome_de_sua_tarefa"
-        android:layout_below="@+id/text_TituloCadastro"/>
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <TextView
-        android:id="@+id/text_DataCadastro"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="18dp"
-        android:text="@string/data_da_atividade"
-        android:layout_below="@+id/edit_TituloCadastro"/>
+        <include layout="@layout/content_cadastro_tarefa" />
 
-    <EditText
-        android:id="@+id/edit_DataCadastro"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/text_DataCadastro"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:inputType="none" />
-
-    <TextView
-        android:id="@+id/text_HoraCadastro"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="18dp"
-        android:text="@string/hora_da_atividade"
-        android:layout_below="@+id/edit_DataCadastro"/>
-
-    <EditText
-        android:id="@+id/edit_HoraCadastro"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/text_HoraCadastro"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:inputType="none" />
-
-    <TextView
-        android:id="@+id/text_Periodicidade"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="18dp"
-        android:layout_below="@+id/edit_HoraCadastro"
-        android:text="@string/qual_a_periodicidade_de_sua_tarefa" />
-
-    <Spinner
-        android:id="@+id/spinner_Periodicidade"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_below="@+id/text_Periodicidade"/>
-
-    <TextView
-        android:id="@+id/text_Criticidade"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="18dp"
-        android:layout_below="@+id/spinner_Periodicidade"
-        android:text="@string/qual_a_criticidade_da_atividade"/>
-
-    <Spinner
-        android:id="@+id/spinner_Criticidade"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_below="@+id/text_Criticidade"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_AdicionarTarefa"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_alignEnd="@+id/spinner_Criticidade"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:clickable="true"
-        android:onClick="adicionarTarefa"
-        android:src="@drawable/ic_send_white_24dp" />
-
-</RelativeLayout>
+    </android.support.design.widget.CoordinatorLayout>
+</android.support.design.widget.CoordinatorLayout>
